--- a/frontend-ems/src/app/app.component.html
+++ b/frontend-ems/src/app/app.component.html
@@ -1,8 +1,2 @@
-<!-- <nav class="navbar navbar-light bg-light justify-content-between">
-  <a class="navbar-brand">Navbar</a>
-  <form class="d-flex form-inline">
-    <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-  </form>
-</nav> -->
-<app-login></app-login>
+<router-outlet></router-outlet>
+<!-- <app-home-page></app-home-page> -->
