--- a/frontend-ems/src/app/sidebar/sidebar.component.html
+++ b/frontend-ems/src/app/sidebar/sidebar.component.html
@@ -10,7 +10,7 @@
       </a>
     </li>
     <li>
-      <a routerLink="/login">
+      <a routerLink="/home-page/personal-details">
         <i class='fa fa-user'></i>
         <span class="link_name">Personal Details</span>
       </a>
