--- a/frontend-ems/src/app/employee-details/employee-details.component.html
+++ b/frontend-ems/src/app/employee-details/employee-details.component.html
@@ -6,13 +6,14 @@
           <div class="card-body text-center">
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
               *ngIf="employee.gender=='Male'" class="rounded-circle img-fluid" style="width: 150px;">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar"
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar"
               *ngIf="employee.gender=='Female'" class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{employee.firstName}} {{employee.lastName}}</h5>
             <p class="text-capitalize text-muted mb-1 bold">{{employee.role}}</p>
             <div class="d-flex justify-content-center mb-2 mt-3">
               <button type="button" class="btn btn-outline-primary">Update</button>
-              <button type="button" *ngIf="employee.role!='EMPLOYEE'"class="btn btn-outline-danger ms-1">Delete</button>
+              <button type="button" *ngIf="employee.role!='EMPLOYEE'"
+                class="btn btn-outline-danger ms-1" (click)="deleteEmployee()">Delete</button>
             </div>
           </div>
         </div>
@@ -58,6 +59,15 @@
             <hr>
             <div class="row">
               <div class="col-sm-3">
+                <p class="mb-0">Active Status</p>
+              </div>
+              <div class="col-sm-9">
+                <p class="text-muted mb-0">{{active}}</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
                 <p class="mb-0">Gender</p>
               </div>
               <div class="col-sm-9">
@@ -89,7 +99,35 @@
               </div>
               <div class="text-capitalize col-sm-9">
                 <p class="text-muted mb-0">{{employee.address.addressLine1}} {{employee.address.addressLine2}}</p>
-                <p class="text-muted mb-0">{{employee.address.pincode}}, {{employee.address.city}} {{employee.address.state}}.</p>
+                <p class="text-muted mb-0">{{employee.address.pincode}}, {{employee.address.city}}
+                  {{employee.address.state}}.</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Created By</p>
+              </div>
+              <div class="text-capitalize col-sm-9">
+                <p class="text-muted mb-0">{{createdBy}}</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Created On</p>
+              </div>
+              <div class="text-capitalize col-sm-9">
+                <p class="text-muted mb-0">{{employee.createdOn}}</p>
+              </div>
+            </div>
+            <hr>
+            <div class="row">
+              <div class="col-sm-3">
+                <p class="mb-0">Updated On</p>
+              </div>
+              <div class="text-capitalize col-sm-9">
+                <p class="text-muted mb-0">{{employee.updatedOn}}</p>
               </div>
             </div>
           </div>
