--- a/frontend-ems/src/app/employee-details/employee-details.component.html
+++ b/frontend-ems/src/app/employee-details/employee-details.component.html
@@ -12,7 +12,7 @@
             <p class="text-capitalize text-muted mb-1 bold">{{employee.role}}</p>
             <div class="d-flex justify-content-center mb-2 mt-3">
               <button type="button" class="btn btn-outline-primary">Update</button>
-              <button type="button" *ngIf="employee.role!='EMPLOYEE'"
+              <button type="button" *ngIf="employee.role!='EMPLOYEE' && showDelete!=false"
                 class="btn btn-outline-danger ms-1" (click)="deleteEmployee()">Delete</button>
             </div>
           </div>
