made some changes in backend for joining tables and added add employee form in frontend to add employees

--- a/frontend-ems/src/app/add-employee/add-employee.component.html
+++ b/frontend-ems/src/app/add-employee/add-employee.component.html
@@ -1,5 +1,91 @@
 <section style="background-color: #F9FDFF;">
     <div class="container py-5">
-        <h2>Add Employee:</h2>
+        <h2 class="mb-3">Add Employee</h2>
+        <form (ngSubmit)="onSubmit()">
+            <div class="form-group">
+                <label for="empId">Employee Id:</label>
+                <input type="text" id="empId" class="form-control" [(ngModel)]="newEmployee.empId"
+                    name="empId" required>
+            </div>
+            <div class="form-group">
+                <label for="firstName">First Name:</label>
+                <input type="text" id="firstName" class="form-control" [(ngModel)]="newEmployee.firstName"
+                    name="firstName" required>
+            </div>
+            <div class="form-group">
+                <label for="lastName">Last Name:</label>
+                <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="email">Email:</label>
+                <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="password">Password:</label>
+                <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="role">Role:</label>
+                <input type="text" id="role" class="form-control" [(ngModel)]="newEmployee.role" name="role" required>
+            </div>
+            <div class="form-group">
+                <label for="addressLine1">Address Line 1:</label>
+                <input type="text" id="addressLine1" class="form-control" [(ngModel)]="newEmployee.address.addressLine1"
+                    name="addressLine1" required>
+            </div>
+            <div class="form-group">
+                <label for="addressLine2">Address Line 2:</label>
+                <input type="text" id="addressLine2" class="form-control" [(ngModel)]="newEmployee.address.addressLine2"
+                    name="addressLine2">
+            </div>
+            <div class="form-group">
+                <label for="city">City:</label>
+                <input type="text" id="city" class="form-control" [(ngModel)]="newEmployee.address.city" name="city"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="state">State:</label>
+                <input type="text" id="state" class="form-control" [(ngModel)]="newEmployee.address.state" name="state"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="pincode">Pincode:</label>
+                <input type="text" id="pincode" class="form-control" [(ngModel)]="newEmployee.address.pincode"
+                    name="pincode" required>
+            </div>
+            <div class="form-group">
+                <label for="contactNumber">Contact Number:</label>
+                <input type="tel" id="contactNumber" class="form-control" [(ngModel)]="newEmployee.contact.number"
+                    name="contactNumber" required>
+            </div>
+            <div class="form-group">
+                <label for="bloodGroup">Blood Group:</label>
+                <input type="text" id="bloodGroup" class="form-control" [(ngModel)]="newEmployee.bloodGroup"
+                    name="bloodGroup" required>
+            </div>
+            <div class="form-group">
+                <label for="gender">Gender:</label>
+                <input type="text" id="gender" class="form-control" [(ngModel)]="newEmployee.gender" name="gender"
+                    required>
+            </div>
+            <div class="form-group">
+                <label for="martialStatus">Marital Status:</label>
+                <input type="text" id="martialStatus" class="form-control" [(ngModel)]="newEmployee.martialStatus"
+                    name="martialStatus" required>
+            </div>
+            <div class="form-group">
+                <label for="dob">Date of Birth:</label>
+                <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
+            </div>
+            <div class="form-group">
+                <label for="createdBy">Created By:</label>
+                <input type="number" id="createdBy" class="form-control" [(ngModel)]="newEmployee.createdBy"
+                    name="createdBy" required>
+            </div>
+            <button type="submit" class="btn btn-primary">Add Employee</button>
+        </form>
     </div>
-  </section>
+</section>
