--- a/frontend-ems/src/app/add-employee/add-employee.component.html
+++ b/frontend-ems/src/app/add-employee/add-employee.component.html
@@ -1,91 +1,128 @@
 <section style="background-color: #F9FDFF;">
     <div class="container py-5">
-        <h2 class="mb-3">Add Employee</h2>
+        <h2 class="mb-3">Add Employee:</h2>
         <form (ngSubmit)="onSubmit()">
-            <div class="form-group">
-                <label for="empId">Employee Id:</label>
+            <div class="mb-3 row">
+                <label  class="col-sm-2 col-form-label" for="empId">Employee Id:</label>
+                <div class="col-sm-4">
                 <input type="text" id="empId" class="form-control" [(ngModel)]="newEmployee.empId"
-                    name="empId" required>
+                    name="empId" required> </div>
             </div>
-            <div class="form-group">
-                <label for="firstName">First Name:</label>
-                <input type="text" id="firstName" class="form-control" [(ngModel)]="newEmployee.firstName"
-                    name="firstName" required>
+            <div class="mb-3 row">
+                <label  class="col-sm-2 col-form-label" for="firstName">First Name:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="firstName" class="form-control" [(ngModel)]="newEmployee.firstName"
+                    name="firstName" required> </div>
             </div>
-            <div class="form-group">
-                <label for="lastName">Last Name:</label>
-                <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName"
+            <div class="mb-3 row">
+                <label  class="col-sm-2 col-form-label" for="lastName">Last Name:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName" required> </div>
+            </div>
+            <div class="mb-3 row">
+                <label  class="col-sm-2 col-form-label" for="email">Email:</label>
+                <div class="col-sm-4">
+                    <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"required> 
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="password">Password:</label>
+                <div class="col-sm-4">
+                    <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password"
                     required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="email">Email:</label>
-                <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"
-                    required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="role">Role:</label>
+                <div class="col-sm-4">
+                    <select id="role" class="form-select" [(ngModel)]="newEmployee.role" name="role" required>
+                        <option selected>Select role</option>
+                        <option value="employee">Employee</option>
+                        <option value="admin" *ngIf="role=='SUPER-ADMIN'">Admin</option>
+                        <option value="superadmin" *ngIf="role=='SUPER-ADMIN'">Superadmin</option>
+                    </select>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="password">Password:</label>
-                <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password"
-                    required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="addressLine1">Address Line 1:</label>
+                <div class="col-sm-7">
+                    <input type="text" id="addressLine1" class="form-control" [(ngModel)]="newEmployee.address.addressLine1" name="addressLine1" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="role">Role:</label>
-                <input type="text" id="role" class="form-control" [(ngModel)]="newEmployee.role" name="role" required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="addressLine2">Address Line 2:</label>
+                <div class="col-sm-7">
+                    <input type="text" id="addressLine2" class="form-control" [(ngModel)]="newEmployee.address.addressLine2" name="addressLine2" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="addressLine1">Address Line 1:</label>
-                <input type="text" id="addressLine1" class="form-control" [(ngModel)]="newEmployee.address.addressLine1"
-                    name="addressLine1" required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="city">City:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="city" class="form-control" [(ngModel)]="newEmployee.address.city" name="city" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="addressLine2">Address Line 2:</label>
-                <input type="text" id="addressLine2" class="form-control" [(ngModel)]="newEmployee.address.addressLine2"
-                    name="addressLine2">
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="state">State:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="state" class="form-control" [(ngModel)]="newEmployee.address.state" name="state" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="city">City:</label>
-                <input type="text" id="city" class="form-control" [(ngModel)]="newEmployee.address.city" name="city"
-                    required>
-            </div>
-            <div class="form-group">
-                <label for="state">State:</label>
-                <input type="text" id="state" class="form-control" [(ngModel)]="newEmployee.address.state" name="state"
-                    required>
-            </div>
-            <div class="form-group">
-                <label for="pincode">Pincode:</label>
-                <input type="text" id="pincode" class="form-control" [(ngModel)]="newEmployee.address.pincode"
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="pincode">Pincode:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="pincode" class="form-control" [(ngModel)]="newEmployee.address.pincode"
                     name="pincode" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="contactNumber">Contact Number:</label>
-                <input type="tel" id="contactNumber" class="form-control" [(ngModel)]="newEmployee.contact.number"
-                    name="contactNumber" required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="role">Contact Type:</label>
+                <div class="col-sm-4">
+                    <select id="contactType" class="form-select" [(ngModel)]="newEmployee.contact.contactType" name="contactType" required>
+                        <option value="Personal">Personal</option>
+                        <option value="Primary">For work</option>
+                    </select>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="bloodGroup">Blood Group:</label>
-                <input type="text" id="bloodGroup" class="form-control" [(ngModel)]="newEmployee.bloodGroup"
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="contactNumber">Contact Number:</label>
+                <div class="col-sm-4">
+                    <input type="tel" id="contactNumber" class="form-control" [(ngModel)]="newEmployee.contact.number" name="contactNumber" required>
+                </div>
+            </div>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="bloodGroup">Blood Group:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="bloodGroup" class="form-control" [(ngModel)]="newEmployee.bloodGroup"
                     name="bloodGroup" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="gender">Gender:</label>
-                <input type="text" id="gender" class="form-control" [(ngModel)]="newEmployee.gender" name="gender"
-                    required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="gender">Gender:</label>
+                <div class="col-sm-4">
+                    <select id="gender" class="form-select" [(ngModel)]="newEmployee.gender" name="gender" required>
+                        <option value="Male">Male</option>
+                        <option value="Female">Female</option>
+                    </select>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="martialStatus">Marital Status:</label>
-                <input type="text" id="martialStatus" class="form-control" [(ngModel)]="newEmployee.martialStatus"
-                    name="martialStatus" required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="martialStatus">Marital Status:</label>
+                <div class="col-sm-4">
+                    <input type="text" id="martialStatus" class="form-control" [(ngModel)]="newEmployee.martialStatus" name="martialStatus" required>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="dob">Date of Birth:</label>
-                <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
+            <div class="mb-3 row">
+                <label class="col-sm-2 col-form-label" for="dob">Date of Birth::</label>
+                <div class="col-sm-4">
+                    <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
+                </div>
             </div>
-            <div class="form-group">
+            <!-- <div class="form-group">
                 <label for="createdBy">Created By:</label>
                 <input type="number" id="createdBy" class="form-control" [(ngModel)]="newEmployee.createdBy"
                     name="createdBy" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Add Employee</button>
+            </div> -->
+            <button type="submit" class="btn btn-outline-primary">Add Employee</button>
         </form>
     </div>
 </section>
