--- a/frontend-ems/src/app/add-employee/add-employee.component.html
+++ b/frontend-ems/src/app/add-employee/add-employee.component.html
@@ -1,128 +1,149 @@
 <section style="background-color: #F9FDFF;">
     <div class="container py-5">
         <h2 class="mb-3">Add Employee:</h2>
-        <form (ngSubmit)="onSubmit()">
-            <div class="mb-3 row">
-                <label  class="col-sm-2 col-form-label" for="empId">Employee Id:</label>
-                <div class="col-sm-4">
-                <input type="text" id="empId" class="form-control" [(ngModel)]="newEmployee.empId"
-                    name="empId" required> </div>
-            </div>
-            <div class="mb-3 row">
-                <label  class="col-sm-2 col-form-label" for="firstName">First Name:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="firstName" class="form-control" [(ngModel)]="newEmployee.firstName"
-                    name="firstName" required> </div>
-            </div>
-            <div class="mb-3 row">
-                <label  class="col-sm-2 col-form-label" for="lastName">Last Name:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName" required> </div>
-            </div>
-            <div class="mb-3 row">
-                <label  class="col-sm-2 col-form-label" for="email">Email:</label>
-                <div class="col-sm-4">
-                    <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"required> 
+        <form (ngSubmit)="onSubmit()" #f="ngForm">
+            <div class="card">
+                <div class="card-body">
+                    <div class="mb-3 row">
+                        <label  class="col-sm-2 col-form-label" for="empId">Employee Id:</label>
+                        <div class="col-sm-2">
+                        <input type="text" id="empId" class="form-control" [(ngModel)]="newEmployee.empId"
+                            name="empId" required> </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                            <div class="form-group row">
+                                <label class="col-4" for="firstName">First Name</label>
+                                <div class="col-8">
+                                    <input type="text" id="firstName" class="form-control" [(ngModel)]="newEmployee.firstName" name="firstName" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="email">Email</label>
+                                <div class="col-8">
+                                    <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"required> 
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="role">Role</label>
+                                <div class="col-8">
+                                    <select id="role" class="form-select" [(ngModel)]="newEmployee.role" name="role">
+                                        <option value="employee">Employee</option>
+                                        <option value="admin" *ngIf="role=='SUPER-ADMIN'">Admin</option>
+                                        <option value="superadmin" *ngIf="role=='SUPER-ADMIN'">Superadmin</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                            <div class="form-group row">
+                                <label class="col-4" for="lastName">Last Name</label>
+                                <div class="col-8">
+                                    <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="password">Password</label>
+                                <div class="col-8">
+                                    <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row mb-2">
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                            <div class="form-group row">
+                                <label class="col-4" for="role">Contact Type</label>
+                                <div class="col-8">
+                                    <select id="contactType" class="form-select" [(ngModel)]="newEmployee.contact.contactType" name="contactType">
+                                        <option value="Personal">Personal</option>
+                                        <option value="Primary">For work</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="addressLine1">Address Line 1</label>
+                                <div class="col-8">
+                                    <input type="text" id="addressLine1" class="form-control" [(ngModel)]="newEmployee.address.addressLine1" name="addressLine1" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="city">City</label>
+                                <div class="col-8">
+                                    <input type="text" id="city" class="form-control" [(ngModel)]="newEmployee.address.city" name="city" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                            <div class="form-group row">
+                                <label class="col-4" for="contactNumber">Contact Number</label>
+                                <div class="col-8">
+                                    <input type="text" id="contactNumber" class="form-control" [(ngModel)]="newEmployee.contact.number" name="contactNumber" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="addressLine2">Address Line 2</label>
+                                <div class="col-8">
+                                    <input type="text" id="addressLine2" class="form-control" [(ngModel)]="newEmployee.address.addressLine2" name="addressLine2" required>
+                                </div>
+                            </div>
+                            <div class="form-group row mt-2">
+                                <label class="col-4" for="state">State</label>
+                                <div class="col-8">
+                                    <input type="text" id="state" class="form-control" [(ngModel)]="newEmployee.address.state" name="state" required>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label" for="pincode">Pincode:</label>
+                        <div class="col-sm-4">
+                            <input type="text" id="pincode" class="form-control" [(ngModel)]="newEmployee.address.pincode"
+                            name="pincode" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label" for="bloodGroup">Blood Group:</label>
+                        <div class="col-sm-4">
+                            <input type="text" id="bloodGroup" class="form-control" [(ngModel)]="newEmployee.bloodGroup"
+                            name="bloodGroup" required>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label" for="gender">Gender:</label>
+                        <div class="col-sm-4">
+                            <select id="gender" class="form-select" [(ngModel)]="newEmployee.gender" name="gender" required>
+                                <option value="Male">Male</option>
+                                <option value="Female">Female</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label" for="martialStatus">Marital Status:</label>
+                        <div class="col-sm-4">
+                            <select id="martialStatus" class="form-select" [(ngModel)]="newEmployee.martialStatus" name="martialStatus" required>
+                                <option value="Single">Single</option>
+                                <option value="Married">Married</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="mb-3 row">
+                        <label class="col-sm-2 col-form-label" for="dob">Date of Birth::</label>
+                        <div class="col-sm-4">
+                            <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
+                        </div>
+                    </div>
+                    <!-- <div class="form-group">
+                        <label for="createdBy">Created By:</label>
+                        <input type="number" id="createdBy" class="form-control" [(ngModel)]="newEmployee.createdBy"
+                            name="createdBy" required>
+                    </div> -->
+                    <div class="submit" style="justify-content: center; text-align: center;">
+                        <button type="submit" class="btn btn-outline-primary" [disabled]="!f.valid">Add Employee</button>
+                    </div>
+                    
                 </div>
             </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="password">Password:</label>
-                <div class="col-sm-4">
-                    <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password"
-                    required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="role">Role:</label>
-                <div class="col-sm-4">
-                    <select id="role" class="form-select" [(ngModel)]="newEmployee.role" name="role" required>
-                        <option selected>Select role</option>
-                        <option value="employee">Employee</option>
-                        <option value="admin" *ngIf="role=='SUPER-ADMIN'">Admin</option>
-                        <option value="superadmin" *ngIf="role=='SUPER-ADMIN'">Superadmin</option>
-                    </select>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="addressLine1">Address Line 1:</label>
-                <div class="col-sm-7">
-                    <input type="text" id="addressLine1" class="form-control" [(ngModel)]="newEmployee.address.addressLine1" name="addressLine1" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="addressLine2">Address Line 2:</label>
-                <div class="col-sm-7">
-                    <input type="text" id="addressLine2" class="form-control" [(ngModel)]="newEmployee.address.addressLine2" name="addressLine2" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="city">City:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="city" class="form-control" [(ngModel)]="newEmployee.address.city" name="city" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="state">State:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="state" class="form-control" [(ngModel)]="newEmployee.address.state" name="state" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="pincode">Pincode:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="pincode" class="form-control" [(ngModel)]="newEmployee.address.pincode"
-                    name="pincode" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="role">Contact Type:</label>
-                <div class="col-sm-4">
-                    <select id="contactType" class="form-select" [(ngModel)]="newEmployee.contact.contactType" name="contactType" required>
-                        <option value="Personal">Personal</option>
-                        <option value="Primary">For work</option>
-                    </select>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="contactNumber">Contact Number:</label>
-                <div class="col-sm-4">
-                    <input type="tel" id="contactNumber" class="form-control" [(ngModel)]="newEmployee.contact.number" name="contactNumber" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="bloodGroup">Blood Group:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="bloodGroup" class="form-control" [(ngModel)]="newEmployee.bloodGroup"
-                    name="bloodGroup" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="gender">Gender:</label>
-                <div class="col-sm-4">
-                    <select id="gender" class="form-select" [(ngModel)]="newEmployee.gender" name="gender" required>
-                        <option value="Male">Male</option>
-                        <option value="Female">Female</option>
-                    </select>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="martialStatus">Marital Status:</label>
-                <div class="col-sm-4">
-                    <input type="text" id="martialStatus" class="form-control" [(ngModel)]="newEmployee.martialStatus" name="martialStatus" required>
-                </div>
-            </div>
-            <div class="mb-3 row">
-                <label class="col-sm-2 col-form-label" for="dob">Date of Birth::</label>
-                <div class="col-sm-4">
-                    <input type="text" id="dob" class="form-control" [(ngModel)]="newEmployee.dob" name="dob" required>
-                </div>
-            </div>
-            <!-- <div class="form-group">
-                <label for="createdBy">Created By:</label>
-                <input type="number" id="createdBy" class="form-control" [(ngModel)]="newEmployee.createdBy"
-                    name="createdBy" required>
-            </div> -->
-            <button type="submit" class="btn btn-outline-primary">Add Employee</button>
         </form>
     </div>
 </section>
