--- a/frontend-ems/src/app/employee-details/employee-details.component.html
+++ b/frontend-ems/src/app/employee-details/employee-details.component.html
@@ -9,9 +9,9 @@
             <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar"
               *ngIf="employee.gender=='Female'" class="rounded-circle img-fluid" style="width: 150px;">
             <h5 class="my-3">{{employee.firstName}} {{employee.lastName}}</h5>
-            <p class="text-capitalize text-muted mb-1 bold">{{employee.role}}</p>
+            <p class="text-capitalize text-muted mb-1 bold">{{employee.role.slice(5)}}</p>
             <div class="d-flex justify-content-center mb-2 mt-3">
-              <button type="button" class="btn btn-outline-primary" (click)="updateEmployee(employee.id)">Update</button>
+              <button type="button" class="btn btn-outline-primary update" (click)="updateEmployee(employee.id)">Update</button>
               <button type="button" *ngIf="employee.role!='EMPLOYEE' && showDelete!=false"
                 class="btn btn-outline-danger ms-1" (click)="deleteEmployee()">Delete</button>
             </div>
@@ -44,7 +44,7 @@
                 <p class="mb-0">Phone</p>
               </div>
               <div class="col-sm-9">
-                <p class="text-muted mb-0">{{employee.contact.num}}</p>
+                <p class="text-muted mb-0">{{employee.contact.number}}</p>
               </div>
             </div>
             <hr>
