--- a/frontend-ems/src/app/sidebar/sidebar.component.html
+++ b/frontend-ems/src/app/sidebar/sidebar.component.html
@@ -5,22 +5,25 @@
   <ul class="nav-links">
     <li *ngIf="role!='EMPLOYEE'">
       <a routerLink="/home-page/add-employee">
-        <i class="fa fa-solid fa-edit"></i>
+        <i class="fa fa-solid fa-user-plus"></i>
         <span class="link_name">Add Employee</span>
       </a>
     </li>
     <li>
       <a routerLink="/home-page/employee-list">
-        <i class="fa fa-solid fa-table"></i>
+        <i class="fa fa-solid fa-clipboard"></i>
+        <!-- <i class="fa fa-solid fa-table"></i> -->
         <span class="link_name">Employee List</span>
       </a>
     </li>
     <li>
       <a routerLink="/home-page/personal-details">
         <i class='fa fa-user'></i>
+        <!-- <i class="fa fa-regular fa-user-pen"></i> -->
         <span class="link_name">Personal Details</span>
       </a>
     </li>
   </ul>
 </div>
 <!-- <a routerLink="/home-page/personal-details"></a> -->
+<!-- <i class="fa-regular fa-user-pen"></i> -->
