--- a/frontend-ems/src/app/employee-details/employee-details.component.html
+++ b/frontend-ems/src/app/employee-details/employee-details.component.html
@@ -4,10 +4,12 @@
       <div class="col-lg-4">
         <div class="card mb-4">
           <div class="card-body text-center">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-              *ngIf="employee.gender=='Male'" class="rounded-circle img-fluid" style="width: 150px;">
-            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar"
-              *ngIf="employee.gender=='Female'" class="rounded-circle img-fluid" style="width: 150px;">
+            <img [src]="profilePic" alt="Image" class="rounded-circle img-fluid" style="height:140px; width: 140px;" *ngIf=profilePic>
+            <div *ngIf="profilePic==null">
+              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar" *ngIf="employee.gender=='Male'" class="rounded-circle img-fluid" style="width: 150px;">
+            <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar" *ngIf="employee.gender=='Female'" class="rounded-circle img-fluid" style="width: 150px;">
+            </div>
+            
             <h5 class="my-3">{{employee.firstName}} {{employee.lastName}}</h5>
             <p class="text-capitalize text-muted mb-1 bold">{{employee.role.slice(5)}}</p>
             <div class="d-flex justify-content-center mb-2 mt-3">
