--- a/frontend-ems/src/app/login/login.component.html
+++ b/frontend-ems/src/app/login/login.component.html
@@ -7,7 +7,7 @@
         <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
           <form #loginForm="ngForm" [formGroup]="login" (ngSubmit)="onSubmit()">
             <h2>LogIn</h2>
-            <!-- Email input -->
+
             <div class="form-outline mb-4">
               <input type="email" formControlName="email" id="email" class="form-control form-control-lg"
                 placeholder="Enter a valid email address" required email/>
@@ -15,7 +15,6 @@
               <span class="help-block text-danger" *ngIf="!login.controls['email'].valid && login.controls['email'].touched">Please enter a valid email!</span>
             </div>
    
-            <!-- Password input -->
             <div class="form-outline mb-3">
               <input type="password" formControlName="password" id="password" class="form-control form-control-lg"
                 placeholder="Enter password" required minlength="1"/>
@@ -23,9 +22,8 @@
             </div>
   
             <div class="d-flex justify-content-between align-items-center">
-              <!-- Checkbox -->
               <div class="form-check mb-0">
-                <input class="form-check-input me-2" type="checkbox" value="" id="checkbox" />
+                <input class="form-check-input me-2" type="checkbox" id="checkbox" [ngModel]="rememberMe" (change)="rememberMe = !rememberMe" name="rememberMe">
                 <label class="form-check-label" for="checkbox">
                   Remember me
                 </label>
