--- a/frontend-ems/src/app/employee-details/personal-details/personal-details.component.css
+++ b/frontend-ems/src/app/employee-details/personal-details/personal-details.component.css
@@ -7,3 +7,12 @@
     border: solid 1px #213449;
     color: #000E1D;
 }
+.form-inline {
+    display: flex;
+    align-items: center;
+}
+  
+.form-inline input, .form-inline button {
+    margin-right: 10px;
+}
+  
