--- a/frontend-ems/src/app/employee-list/employee-list.component.html
+++ b/frontend-ems/src/app/employee-list/employee-list.component.html
@@ -13,10 +13,7 @@
         <div class="card-body">
           <div class="row">
             <div class="col-lg-2">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava3.webp" alt="avatar"
-                *ngIf="employee.gender=='Male'" class="rounded-circle img-fluid" style="width: 70px;">
-              <img src="https://mdbcdn.b-cdn.net/img/Photos/new-templates/bootstrap-chat/ava2.webp" alt="avatar"
-                *ngIf="employee.gender=='Female'" class="rounded-circle img-fluid" style="width: 70px;">
+              <img [src]="getProfilePic(employee.email, employee.gender)" alt="Image" class="rounded-circle img-fluid" style="width: 75px; height: 75px;">
             </div>
             <div class="col-lg-4">
               <p class="mb-1">Name: {{employee.firstName}} {{employee.lastName}}</p>
