--- a/frontend-ems/src/app/employee-list/employee-list.component.html
+++ b/frontend-ems/src/app/employee-list/employee-list.component.html
@@ -8,7 +8,7 @@
         <input type="text" [(ngModel)]="search" placeholder="Search Employee..." class="form-control mb-3">
       </div>
     </div>
-    <div class="col mb-3" *ngFor="let employee of filteredEmployees;">
+    <div class="col mb-3" *ngFor="let employee of sliceList;">
       <div class="card" *ngIf="role!='EMPLOYEE' || employee.active==true" [ngStyle]="{backgroundColor: employee.active==true?'#D5f5E3':'#FADBD8'}">
         <div class="card-body">
           <div class="row">
@@ -32,5 +32,6 @@
         </div>
       </div>
     </div>
+    <app-paginator *ngIf="totalSize" (change)="onChange($event)" [totalSize]="totalSize" [pageSize]="pageSize"></app-paginator>
   </div>
 </section>
