--- a/frontend-ems/src/app/employee-list/employee-list.component.html
+++ b/frontend-ems/src/app/employee-list/employee-list.component.html
@@ -9,11 +9,13 @@
       </div>
     </div>
     <div class="col mb-3" *ngFor="let employee of sliceList;">
-      <div class="card" *ngIf="role!='EMPLOYEE' || employee.active==true" [ngStyle]="{backgroundColor: employee.active==true?'#D5f5E3':'#FADBD8'}">
+      <div class="card" *ngIf="role!='EMPLOYEE' || employee.active==true"
+        [ngStyle]="{backgroundColor: employee.active==true?'#D5f5E3':'#FADBD8'}">
         <div class="card-body">
           <div class="row">
             <div class="col-lg-2">
-              <img [src]="getProfilePic(employee.email, employee.gender)" alt="Image" class="rounded-circle img-fluid" style="width: 75px; height: 75px;">
+              <img [src]="getProfilePic(employee.email, employee.gender)" alt="Image" class="rounded-circle img-fluid"
+                style="width: 75px; height: 75px;">
             </div>
             <div class="col-lg-4">
               <p class="mb-1">Name: {{employee.firstName}} {{employee.lastName}}</p>
@@ -32,6 +34,7 @@
         </div>
       </div>
     </div>
-    <app-paginator *ngIf="totalSize" (change)="onChange($event)" [totalSize]="totalSize" [pageSize]="pageSize"></app-paginator>
+    <app-paginator *ngIf="totalSize" (change)="onChange($event)" [totalSize]="totalSize"
+      [pageSize]="pageSize"></app-paginator>
   </div>
 </section>
