--- a/frontend-ems/src/app/add-employee/add-employee.component.html
+++ b/frontend-ems/src/app/add-employee/add-employee.component.html
@@ -15,7 +15,18 @@
                             <div class="form-group row mt-2">
                                 <label class="col-4" for="email">Email</label>
                                 <div class="col-8">
-                                    <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email"required> 
+                                    <input type="email" id="email" class="form-control" [(ngModel)]="newEmployee.email" name="email" required style="margin-bottom: 5px;">
+                                    <button type="button" class="btn btn-outline-primary" (click)="check()" style="margin-right: 5px;">Check Email</button>
+                                    <span style="color: red;" *ngIf="showExists">Already exists</span>
+                                    <span style="color: green;" *ngIf="showNotExists">Email available</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
+                            <div class="form-group row">
+                                <label class="col-4" for="lastName">Last Name</label>
+                                <div class="col-8">
+                                    <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName" required>
                                 </div>
                             </div>
                             <div class="form-group row mt-2">
@@ -28,20 +39,12 @@
                                     </select>
                                 </div>
                             </div>
-                        </div>
-                        <div class="col-12 col-sm-12 col-md-12 col-lg-6">
-                            <div class="form-group row">
-                                <label class="col-4" for="lastName">Last Name</label>
-                                <div class="col-8">
-                                    <input type="text" id="lastName" class="form-control" [(ngModel)]="newEmployee.lastName" name="lastName" required>
-                                </div>
-                            </div>
-                            <div class="form-group row mt-2">
+                            <!-- <div class="form-group row mt-2">
                                 <label class="col-4" for="password">Password</label>
                                 <div class="col-8">
                                     <input id="password" class="form-control" [(ngModel)]="newEmployee.password" name="password" required>
                                 </div>
-                            </div>
+                            </div> -->
                         </div>
                     </div>
                     <div class="row mb-2">
