--- a/frontend-ems/src/app/employee-list/employee-list.component.css
+++ b/frontend-ems/src/app/employee-list/employee-list.component.css
@@ -3,7 +3,7 @@
     color: #2a4058;
 }
 .btn:hover{
-    background-color: #CDE5FF;
+    background-color: #77a3d1a9;
     border: solid 1px #2a4058;
-    color: #000E1D;
+    color: #000000;
 }
